# tree-disk-pith

./: .gitignore  README.md  fetch_dataset.py  fetch_pretrained_model.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
lib/: geometry.py  image.py  io.py  logger.py  optimization.py  pclines_parallel_coordinates.py  pith_detector.py  structural_tensor.py
scripts/: fetch_dataset.py  fetch_pretrained_model.py
src/: image.py  io.py  optimization.py  pclines_parallel_coordinates.py  pith_detector.py
src/core/: pclines_parallel_coordinates.py
src/detection/: pith_detection.py  pith_detector.py
src/geometry/: primitives.py  structural_tensor.py
src/optimization/: least_squares_solver.py  optimization.py  optimization_utils.py  optimizer.py
src/processing/: image_processing.py
src/treediskpith/: cli.py  config.py  main.py
src/treediskpith/detection/: detection_method.py  pith_detection.py
src/treediskpith/geometry/: primitives.py  structural_tensor.py
src/treediskpith/utils/: file_utils.py
src/treediskpithdetector/: cli.py  config.py  detector.py  main.py
src/treediskpithdetector/detection/: pith_detection.py
src/treediskpithdetector/geometry/: geometry_utils.py  line_transformations.py
src/treediskpithdetector/optimization/: least_squares_solver.py  optimization_utils.py  optimizer.py
src/treediskpithdetector/processing/: image_processing.py
src/utils/: file_utils.py  image.py
src/visualization/: drawing.py
tests/: test_treediskpith.py  test_treediskpithdetector.py
(+3 files in other folders)
